--- a/project.css
+++ b/project.css
@@ -1,6 +1,5 @@
 *{
-    padding: 0px;
-    margin: 0px;
+    
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -17,15 +16,21 @@
     align-items: center;
 }
 
+
+
 .list-item{
     color: white;
     font-size: 18px;
 }
 
+.list-item:hover{
+    color: bisque;
+}
+
 .carousel-images{
     width: 100%;
     height: 100vh;
-    opacity: 0.8;
+    
 }
 
 .carousel-heading{
@@ -52,6 +57,11 @@
     width: 100%;
     margin: 10px;
     border-radius: 10px;
+    
+}
+
+.destination-card{
+    transition: transform .2s;
 }
 
 .destination-card:hover{
@@ -64,7 +74,7 @@
 }
 
 .luxury-img-container:hover{
-    animation: shake 0.5s;
+    animation: shake 0.6s;
 }
 
 @keyframes shake {
