--- a/project.css
+++ b/project.css
@@ -1,7 +1,11 @@
-body{
+*{
     
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.bro{
+    border: 2px solid whitesmoke;
 }
 
 .nav-bg{
